# QF

./: .gitignore  ACCEPTANCE_REPORT_B0_REPAIR.md  ACCEPTANCE_REPORT_P0.md  CLAUDE.md  PUBLIC_SOURCE_AUDIT.md  README.md  README_REPRODUCE.md  V1.2_VALIDATION.md  V1.3_PUBLIC_VALIDATION.md  V1.4_TRUSTWORTHINESS.md  V1.5.1_GOVERNANCE.md  V1.5_ALPHA.md  V1.5_VALIDATION.md  V1.6_PORTFOLIO_EXECUTION.md  V1.6_VALIDATION.md  V2.0_ALPHA1_PIT_DATA.md  V2.0_ALPHA1_VALIDATION.md  V2.0_ALPHA2_FACTOR_RESEARCH.md  V2.0_ALPHA2_VALIDATION.md  V2.0_ALPHA3_SHADOW_INTEGRATION.md  V2.0_ALPHA3_VALIDATION.md  V2.0_ALPHA4_ARCHIVE_BRIDGE.md  V2.0_ALPHA4_VALIDATION.md  V2.0_ALPHA5_ACCEPTANCE.md  V2.0_ALPHA5_VALIDATION.md  config.archive.example.yaml  config.example.yaml  pyproject.toml  requirements-public.txt  requirements.txt  run.py
docs/: DATA_ACQUISITION_V2_DESIGN.md  START_HERE.md  TUSHARE_DATA_ARCHIVE_PLAN.md  TUSHARE_DATA_REQUIREMENTS.md
results/: v1_2_comparison.json
scripts/: build_base_cache_from_archive.py  build_delivery_zip.py  build_source_zip.py  cross_source_financial.py  cross_source_market.py  freeze_b4_specs.py  migrate_aborted_b3.py  migrate_b2_legacy_cleanup.py  migrate_orphaned_context_drift.py  phase_a1_decision.py  preflight_b4.py  probe_sharefloat_overflow.py  reverify_raw_sha.py  run_all_p0_batches.sh  run_b2_repair.py  run_b2_resume_chain.sh  run_b3_repair.py  run_b4_repair.py  run_p0_batch.py  soak_test.py
tests/: stress_sina_decoder.py  test_archive.py  test_base_cache_bridge.py  test_pit_acceptance.py  test_pit_data.py  test_pit_lake.py  test_pit_research.py  (+3 more)
(+95 files in other folders)
