[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-multifactor-backtest"
version = "1.0.0"
description = "Point-in-time A-share multi-factor research backtester"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "PyYAML>=6,<7",
  "matplotlib>=3.8,<4",
  "tushare>=1.4.21,<2",
]

[project.scripts]
ashare-quant = "ashare_quant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
