[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-multifactor-backtest"
version = "2.0.0a6"
description = "Point-in-time A-share multi-factor research and validation backtester"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "PyYAML>=6,<7",
  "matplotlib>=3.8,<4",
  "requests>=2.31,<3",
  "tushare>=1.4.21,<2",
]

[project.scripts]
ashare-quant = "ashare_quant.cli:main"

[project.optional-dependencies]
public = ["akshare>=1.18,<2"]

[dependency-groups]
dev = ["ruff==0.15.21"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]  # tests add src/ to sys.path for direct unittest execution
